crates/analyzer/tests/snapshots/errors__init_wrong_return_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `__init__` function is not public
  ┌─ compile_errors/init_wrong_return_type.fe:2:5
  │  
2 │ ╭     fn __init__() -> u64:
3 │ │         return 10
  │ ╰─────────────────^ `__init__` function must be public
  │  
  = Hint: Add the `pub` modifier.
  = Example: `pub fn __init__():`

error: `__init__` function has incorrect return type
  ┌─ compile_errors/init_wrong_return_type.fe:2:22
  │
2 │     fn __init__() -> u64:
  │                      ^^^ return type should be `()`
  │
  = Hint: Remove the return type specification.
  = Example: `pub fn __init__():`

error: expected function to return `()` but was `u256`
  ┌─ compile_errors/init_wrong_return_type.fe:3:9
  │
3 │         return 10
  │         ^^^^^^^^^


