crates/analyzer/tests/snapshots/errors__int_type_constructor_generic_arg_list.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `u256` type does not expect generic arguments
  ┌─ [snippet]:3:7
  │
3 │   u256<>(10)
  │       ^^ unexpected generic argument list


