crates/analyzer/tests/snapshots/errors__int_type_generic_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `u256` type is not generic
  ┌─ [snippet]:3:14
  │
3 │   let x: u256<10>
  │              ^^^^ unexpected type argument list
  │
  = Hint: use `u256`


